--- a/src/apps/bake/Cargo.toml
+++ b/src/apps/bake/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.9", features = ["derive"] }
 colored = "2.1.0"
 glob = "0.3.1"
 petgraph = "0.6.5"
