--- a/src/apps/bake/Cargo.toml
+++ b/src/apps/bake/Cargo.toml
@@ -8,10 +8,13 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.9", features = ["derive"] }
 colored = "2.1.0"
+futures = "0.3.30"
 glob = "0.3.1"
+num_cpus = "1.16.0"
 petgraph = "0.6.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.38.0", features = ["full"] }
 
 [[bin]]
 name = "bake"
