bake: Globbing in args

--- a/src/apps/bake/.gitignore
+++ b/src/apps/bake/.gitignore
@@ -16,5 +16,6 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+build/
 
 # End of https://www.toptal.com/developers/gitignore/api/rust
