meta: Limine config

--- a/meta/limine.cfg
+++ b/meta/limine.cfg
@@ -2,7 +2,7 @@
 TIMEOUT=3
 
 # The entry name that will be displayed in the boot menu.
-:Limine Template
+:Mirus
     # We use the Limine boot protocol.
     PROTOCOL=limine
 
@@ -13,7 +13,7 @@ TIMEOUT=3
     KERNEL_PATH=boot:///boot/kernel
 
 # Same thing, but with KASLR.
-:Limine Template (with KASLR)
+:Mirus (KASLR)
     PROTOCOL=limine
 
     KERNEL_PATH=boot:///boot/kernel
