--- a/meta/limine.cfg
+++ b/meta/limine.cfg
@@ -1,19 +1,7 @@
-# Timeout in seconds that Limine will use before automatically booting.
 TIMEOUT=3
 
-# The entry name that will be displayed in the boot menu.
 :Mirus
-    # We use the Limine boot protocol.
     PROTOCOL=limine
-
-    # Disable KASLR (it is enabled by default for relocatable kernels)
     KASLR=no
-
-    # Path to the kernel to boot. boot:/// represents the partition on which limine.cfg is located.
     KERNEL_PATH=boot:///boot/kernel
-
-# Same thing, but with KASLR.
-:Mirus (KASLR)
-    PROTOCOL=limine
-
-    KERNEL_PATH=boot:///boot/kernel
+    MODULE_PATH=boot:///u_vga16.sfn
