--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -1,18 +1,20 @@
-name: Clang Format Check
-
-on:
-  pull_request:
-    paths:
-      - 'src/**'
-
+name: clang-format Check
+on: [pull_request]
 jobs:
   formatting-check:
     name: Formatting Check
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        path:
+          - "src/kernel"
+          - "src/hal"
+          - "src/libs/libk"
+          - "src/libs/logger"
     steps:
-    - uses: actions/checkout@v3
-    - name: Run clang-format style check for C/C++ programs.
-      uses: jidicula/clang-format-action@v4.11.0
-      with:
-        clang-format-version: '14'
-        check-path: 'src/kernel src/hal src/libs/libk src/libs/logger'
+      - uses: actions/checkout@v4
+      - name: Run clang-format style check for C/C++/Protobuf programs.
+        uses: jidicula/clang-format-action@v4.13.0
+        with:
+          clang-format-version: "13"
+          check-path: ${{ matrix.path }}
