--- a/meta/limine.cfg
+++ b/meta/limine.cfg
@@ -5,4 +5,5 @@ TIMEOUT=0
     KASLR=no
     KERNEL_PATH=boot:///boot/kernel
     MODULE_PATH=boot:///u_vga16.sfn
-    RESOLUTION=2560x1440
+    #RESOLUTION=2560x1440
+    RESOLUTION=1024x768
